unpackaged/main/default/objects/ABA_File_Details_Record__c/ABA_File_Details_Record__c.object-meta.xml
<CustomObject>
    <label>ABA File Details Record</label>
    <nameField>
        <displayFormat>AFDR-{0000}</displayFormat>
        <label>ABA File Details Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABA File Details Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>