unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Numeric, hyphens and blanks only are valid. Must not contain all
blanks or zeros. Leading zeros which are part of a valid account
number must be shown, e.g. 00-1234.</description>
    <inlineHelpText>Numeric, hyphens and blanks only are valid. Must not contain all
blanks or zeros. Leading zeros which are part of a valid account
number must be shown, e.g. 00-1234.</inlineHelpText>
    <label>Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>