unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Only numeric valid. Must be greater than zero. Shown in cents
without punctuations. Right justified, zero filled. Unsigned.</description>
    <inlineHelpText>Only numeric valid. Must be greater than zero. Shown in cents
without punctuations. Right justified, zero filled. Unsigned.</inlineHelpText>
    <label>Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>