unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Amount_of_Withholding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Withholding_Tax__c</fullName>
    <description>Numeric only valid. Show in cents without punctuation.
Right justified, zero filled. Unsigned.</description>
    <inlineHelpText>Numeric only valid. Show in cents without punctuation.
Right justified, zero filled. Unsigned.</inlineHelpText>
    <label>Amount of Withholding Tax</label>
    <length>8</length>
    <type>Text</type>
</CustomField>