unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <description>Must be numeric with a hyphen in character position 5. Character
positions 2 and 3 must equal valid Financial Institution number.
Character position 4 must equal a valid State number (0-9).</description>
    <inlineHelpText>Must be numeric with a hyphen in character position 5. Character
positions 2 and 3 must equal valid Financial Institution number.
Character position 4 must equal a valid State number (0-9).</inlineHelpText>
    <label>BSB Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>