unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <label>Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>