unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Lodgement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Reference__c</fullName>
    <description>All coded character set valid. Reference as submitted by the User
indicating details of the origin of the entry e.g. Payroll number,
invoice, contract number.
Left justified, blank filled. Must not contain all blanks.</description>
    <inlineHelpText>All coded character set valid. Reference as submitted by the User
indicating details of the origin of the entry e.g. Payroll number,
invoice, contract number.
Left justified, blank filled. Must not contain all blanks.</inlineHelpText>
    <label>Lodgement Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>