unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Name_of_Remitter__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Remitter__c</fullName>
    <description>Name of originator of the entry. This may vary from Name of the
User. All coded character set valid. Must not contain all blanks.
Left justified, blank filled.</description>
    <inlineHelpText>Name of originator of the entry. This may vary from Name of the
User. All coded character set valid. Must not contain all blanks.
Left justified, blank filled.</inlineHelpText>
    <label>Name of Remitter</label>
    <length>16</length>
    <type>Text</type>
</CustomField>