unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <defaultValue>'1'</defaultValue>
    <description>Must be '1'</description>
    <inlineHelpText>Must be '1'</inlineHelpText>
    <label>Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>