unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Title_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Account__c</fullName>
    <description>All coded character set valid. Must not be all blanks.
Left justified, blank filled. Desirable format:
- surname (period)
 blank
- given names with blank between each name</description>
    <inlineHelpText>All coded character set valid. Must not be all blanks.
Left justified, blank filled. Desirable format:
- surname (period)
 blank
- given names with blank between each name</inlineHelpText>
    <label>Title of Account</label>
    <length>32</length>
    <type>Text</type>
</CustomField>