unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Trace_record_account_number__c.field-meta.xml
<CustomField>
    <fullName>Trace_record_account_number__c</fullName>
    <label>Trace record account number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>