unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Trace_record_bsb_number__c.field-meta.xml
<CustomField>
    <fullName>Trace_record_bsb_number__c</fullName>
    <description>Bank(FI)/State/Branch and account number of User to enable
retracing of the entry to its source if necessary.</description>
    <inlineHelpText>Bank(FI)/State/Branch and account number of User to enable
retracing of the entry to its source if necessary.</inlineHelpText>
    <label>Trace record bsb number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>