unpackaged/main/default/objects/ABA_File_Details_Record__c/fields/Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Code__c</fullName>
    <description>Must only be valid industry standard trancodes (see list). Only
numeric valid.</description>
    <inlineHelpText>Must only be valid industry standard trancodes (see list). Only
numeric valid.</inlineHelpText>
    <label>Transaction Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>